Fix missing space at the bottom of the feed when there's scrolling

--- a/src/main/styles/feed.less
+++ b/src/main/styles/feed.less
@@ -12,6 +12,7 @@
   .items {
     overflow: auto;
     height: 100%;
+    padding-bottom: 1em;
 
     .feed-item:first-child {
       margin-top: 0;
